Address sonar
Signed-off-by: Robert Young <robeyoun@redhat.com>